feat: Enhance visual appeal and user experience
Introduces several visual and interactive enhancements to the landing page. This includes:

- **Animation:** Adds a subtle floating animation to the form section for increased engagement.
- **MacBook Frame:** Increases the size of the MacBook frame component to better showcase the video content.
- **Vimeo Autoplay:** Adjusts Vimeo video playback to autoplay with sound enabled, improving the initial impression.
- **Layout Adjustments:** Fine-tunes spacing and scaling in the main app layout for a more polished desktop and mobile experience.
- **Facebook Pixel:** Restores the Facebook Pixel `noscript` tag to ensure accurate tracking across all browsers.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
       fbq('init', '1016232387334785');
       fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=1016232387334785&ev=PageView&noscript=1"
-    /></noscript>
     <!-- End Meta Pixel Code -->
 
     <script>
@@ -50,6 +47,15 @@
             },
             backgroundImage: {
               'grid-pattern': "linear-gradient(to right, #222222 1px, transparent 1px), linear-gradient(to bottom, #222222 1px, transparent 1px)",
+            },
+            animation: {
+              'float': 'float 6s ease-in-out infinite',
+            },
+            keyframes: {
+              float: {
+                '0%, 100%': { transform: 'translateY(0)' },
+                '50%': { transform: 'translateY(-20px)' },
+              }
             }
           }
         }
@@ -93,6 +99,9 @@
 </script>
 </head>
   <body>
+    <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1016232387334785&ev=PageView&noscript=1"
+    /></noscript>
     <div id="root"></div>
   </body>
 </html>
